# comp0138-pytctracer

./: .env.example  .gitattributes  .gitignore  .pylintrc  README.md  REPLICATION_COMMANDS.md  REPLICATION_GUIDELINES.md  dev-requirements.txt  extract_test_and_function_names.py  factorial_parse_results.txt  factorial_pytest_tracer_logs.csv  main.py  pyopenssl_parse_results_only_tests_in_ground_truth.txt  pyopenssl_predictions_results.csv  pyproject.toml  requirements.txt  setup.py  trace_parser.py  trace_parser_dynamic.py
analysis/arrow/: arrow_breakdown.json  arrow_predictions_results.csv
analysis/kedro/: kedro_breakdown.json  kedro_predictions_results.csv
analysis/pyopenssl/: pyopenssl_breakdown.json  pyopenssl_predictions_results.csv
analysis_for_pyopenssl/: pyopenssl_chosen_tests.py  pyopenssl_ground_truth.json
combined-removed/: pyopenssl_function_no_lcba.csv  pyopenssl_function_no_lcsb.csv  pyopenssl_function_no_lcsu.csv  pyopenssl_function_no_leven.csv  pyopenssl_function_no_nc.csv  pyopenssl_function_no_ncc.csv  pyopenssl_function_no_tarantula.csv  pyopenssl_function_no_tfidf.csv  pyopenssl_function_no_tfidf_multi.csv
copilot-chat-histories/: copilot_prompt_for_classes.txt  copilot_prompt_for_functions.txt
copilot-chat-histories/chartify/: chartify_chat_history.json
data/: 1.csv  a.json  average_class.csv  average_function.csv  b.json  c.json  t.py  tes.py  trace_parser_dynamic.py
ground-truth-data/pyopenssl/: pyopenssl_chosen_tests.py
ground_truth_data/arrow/: arrow_all_function_names.txt  arrow_all_test_names.txt  arrow_ground_truth.json  arrow_sample_test_names.txt
ground_truth_data/kedro/: kedro_all_function_names.txt  kedro_all_test_names.txt  kedro_ground_truth.json  kedro_sample_test_names.txt
ground_truth_data/pyopenssl/: pyopenssl_chosen_tests.py
misc/: inspe.py  test.py
pytctracer/: __init__.py  analyser.py  cli.py  main.py  tracer.py
pytctracer/config/: config.py
pytctracer/evaluation/: __init__.py  classify_predictions.py  evaluate_predictions.py
pytctracer/parsing/: __init__.py  find_class_level_calls.py  find_class_level_names.py  find_function_level_calls.py  find_function_level_names.py  functions_called_before_assert.py
pytctracer/techniques/: __init__.py  arg_name_to_technique_mapper.py  combined.py  last_call_before_assert.py  levenshtein_distance.py  longest_common_subsequence.py  naming_conventions.py  tarantula.py  technique.py  tfidf.py
src/: __init__.py  analyser.py
src/config/: config.py
src/evaluation/: classify_predictions.py  evaluate_predictions.py
src/parsing/: __init__.py  find_class_level_calls.py  find_class_level_names.py  find_function_level_calls.py  (+2 more)
src/techniques/: tfidf.py  (+8 more)
(+380 files in other folders)
