[project]
authors = [
  {name = "Jason Ho"}
]
description = """CLI tool demonstrating test-to-code traceability techniques on Python codebases that use the Pytest testing framework."""
readme = "README.md"
name = "tctracer"
version = "0.1.1"
classifiers=[
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
tctracer = "pytctracer.main:cli"