[project]
authors = [
  {name = "Jason Ho"}
]
description = """Research library demonstrating test-to-code traceability techniques on Python codebases that use the Pytest testing framework."""
readme = "README.md"
name = "pytctracer"
version = "0.1.9"
classifiers=[
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
  "matplotlib==3.8.3",
  "scikit-learn==1.4.1.post1",
  "click==8.1.7",
  "pytest<=8.1.0"
]
urls = { "Repository" = "https://github.com/jasonho2582001/comp0138-pytctracer" }

[tool.setuptools.packages.find]
where = ["."] 

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
pytctracer = "pytctracer.cli:cli"

[project.optional-dependencies]
dev = [
  "black==24.3.0",
  "pylint==3.1.0",
  "setuptools==69.2.0",
  "bump2version==1.0.1"
]